# rust-cli-template

./: Cargo.toml  README.md
crates/lib/: Cargo.toml
crates/lib/benches/: initial_benchmark.rs
crates/lib/src/: lib.rs
crates/lib/src/util/: tracing.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
